Tui la Vi da lam xong phan founder va benefits

--- a/src/page/layout/benefits.pug
+++ b/src/page/layout/benefits.pug
@@ -7,16 +7,16 @@
                 .benefit-name 
                     p Ưu đãi <br> khủng
                 .benefit-infor 
-                    p Ưu đãi khi mua hàng nguyên giá chỉ dành cho thành viên của 6stars
+                    p Ưu đãi khi mua hàng nguyên giá chỉ dành cho thành viên của SIXSTARs
             .benefit-column
                 .benefit-name 
                     p Tiện ích <br> online 24/7
                 .benefit-infor 
-                    p Đăng ký thành viên để được hỗ trợ 24/7 từ 6stars và nhiều tiện ích khác
+                    p Đăng ký thành viên để được hỗ trợ 24/7 từ SIXSTARs và nhiều tiện ích khác
             .benefit-column
                 .benefit-name 
                     p Nhận quà <br> siêu khủng 
                 .benefit-infor
-                    p Trải nghiệm khi làm thành viên của 6stars và nhận nhiều phần quà hấp dẫn đến từ các chương trình 6stars
+                    p Trải nghiệm khi làm thành viên của SIXSTARs và nhận nhiều phần quà hấp dẫn đến từ các chương trình SIXSTARs
 p
     <div style = "height: 100vh"></div>
