--- a/src/scss/component/benefits.scss
+++ b/src/scss/component/benefits.scss
@@ -59,7 +59,7 @@
 @media(max-width: 960px){
     .benefits-part{
         .benefits{
-            flex-direction: column-reverse;
+            flex-direction: column;
         }
         .benefit-column{
             width: 100%;
@@ -70,11 +70,27 @@
             padding: 0;
         }
         .benefit-name{
-            margin: 0;
+            margin: 10px;
             padding: 0;
         }
         .benefit-infor{
             width: 600px;
+            display: flex;
+            justify-content: center;
+            margin: 0;
+            padding: 0;
+        }
+    }
+}
+@media(max-width: 780px){
+    .benefits-part{
+        .benefit-column{
+            flex-wrap: wrap;
+        }
+        .benefit-infor{
+            margin: 10px;
+            width: 50rem;
+            // height: 50rem;
         }
     }
 }
