--- a/src/scss/component/benefits.scss
+++ b/src/scss/component/benefits.scss
@@ -1,11 +1,11 @@
 .benefits-part{
     .container{
-        border: 2px solid blue;
+        // border: 2px solid blue;
         padding: 1rem;
         background-color: #2a2a2a;
     }
     .title{
-        border: 2px solid greenyellow;
+        // border: 2px solid greenyellow;
         text-align: center;
         font-size: 3rem;
         font-weight: 1000;
@@ -16,14 +16,14 @@
         padding: 1rem;
     }
     .benefits{
-        border: 2px solid orange;
+        // border: 2px solid orange;
         display: flex;
         flex-wrap: nowrap;
         background-color: #fff;
         box-shadow: 7px -6px 1px #eeeeee;
     }
     .benefit-column{
-        border: 2px solid purple;
+        // border: 2px solid purple;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
