--- a/src/page/layout/benefits.pug
+++ b/src/page/layout/benefits.pug
@@ -1,22 +1,25 @@
 .benefits-part
-    .container
-        .title
-            p Quyền lợi thành viên và khách hàng thường xuyên
-        .benefits 
-            .benefit-column
-                .benefit-name 
-                    p Ưu đãi <br> khủng
-                .benefit-infor 
-                    p Ưu đãi khi mua hàng nguyên giá chỉ dành cho thành viên của SIXSTARs
-            .benefit-column
-                .benefit-name 
-                    p Tiện ích <br> online 24/7
-                .benefit-infor 
-                    p Đăng ký thành viên để được hỗ trợ 24/7 từ SIXSTARs và nhiều tiện ích khác
-            .benefit-column
-                .benefit-name 
-                    p Nhận quà <br> siêu khủng 
-                .benefit-infor
-                    p Trải nghiệm khi làm thành viên của SIXSTARs và nhận nhiều phần quà hấp dẫn đến từ các chương trình SIXSTARs
-p
-    <div style = "height: 100vh"></div>
+    .bg 
+        .container
+            .title
+                span QUYỀN LỢI 
+                span THÀNH VIÊN
+            .benefits 
+                .benefit-column
+                    .benefit-name 
+                        p 😆
+                    .benefit-infor 
+                        h3 Ưu đãi khủng
+                        p Ưu đãi khi mua hàng nguyên giá chỉ dành cho thành viên của SIXSTARs
+                .benefit-column
+                    .benefit-name 
+                        p 🤗
+                    .benefit-infor 
+                        h3 Tiện ích online 24/7
+                        p Đăng ký thành viên để được hỗ trợ 24/7 từ SIXSTARs và nhiều tiện ích khác
+                .benefit-column
+                    .benefit-name 
+                        p  😍
+                    .benefit-infor
+                        h3 Nhận quà siêu khủng
+                        p Trải nghiệm khi làm thành viên của SIXSTARs và nhận nhiều phần quà hấp dẫn đến từ các chương trình SIXSTARs
