--- a/src/page/layout/rating.pug
+++ b/src/page/layout/rating.pug
@@ -1,70 +1,68 @@
-link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css')
-link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css' integrity='sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==' crossorigin='anonymous' referrerpolicy='no-referrer')
 .rating-part
-    section
-        .swiper.mySwiper.container
-            .swiper-wrapper.content
-                .swiper-slide.card
+    .slide-container.swiper
+        .slide-content
+            .card-wrapper.swiper-wrapper
+                .card.swiper-slide
+                    .image-content
+                        span.overlay
+                        .card-image
+                            img.card-img(src='../img/duy.jpg' alt='')
                     .card-content
-                        .image
-                            img(src="../img/Huy.jpg", alt="")
-                        .feedback__content
-                            span.name Fap2kg
-                            span.profession Mình đánh giá sản phẩm bên SIXSTARs cực kì tốt, cực kì chất lượng. Mình mới mua lần đầu nhưng kết quả mình nhận lại hơn kì vọng, mình nhất định sẽ quay lại ủng hộ, mong các bạn tiếp tục cho ra thêm nhiều sản phẩm chất lượng hơn
-                .swiper-slide.card
+                        h2.name Duy 18
+                        p.description
+                            | Sử dụng sản phẩm bên SIXSTARs cực kì yên tâm và hài lòng. Bao cao su có đủ loại nhưng điều đặc biệt là không thua kém gì các hãng lớn khác về chất lượng, có bao bì, nhãn mác, nơi sản xuất đầy đủ giúp người dùng yên tâm sử dụng.
+                        //- button.button View More
+                .card.swiper-slide
+                    .image-content
+                        span.overlay
+                        .card-image
+                            img.card-img(src='../img/Huy.jpg' alt='')
                     .card-content
-                        .image
-                            img(src="../img/Duy.jpg", alt="")
-                        .feedback__content
-                            span.name Duy 18
-                            span.profession Sử dụng sản phẩm bên SIXSTARs cực kì yên tâm và hài lòng. Bao cao su có đủ loại nhưng điều đặc biệt là không thua kém gì các hãng lớn khác về chất lượng, có bao bì, nhãn mác, nơi sản xuất đầy đủ giúp người dùng yên tâm sử dụng.
-                .swiper-slide.card
+                        h2.name Fap2kg
+                        p.description
+                            | Mình đánh giá sản phẩm bên SIXSTARs cực kì tốt, cực kì chất lượng. Mình mới mua lần đầu nhưng kết quả mình nhận lại hơn kì vọng, mình nhất định sẽ quay lại ủng hộ, mong các bạn tiếp tục cho ra thêm nhiều sản phẩm chất lượng hơn
+                        //- button.button View More
+                .card.swiper-slide
+                    .image-content
+                        span.overlay
+                        .card-image
+                            img.card-img(src='../img/Manh20.jpg' alt='')
                     .card-content
-                        .image
-                            img(src="../img/Manh.jpg", alt="")
-                        .feedback__content
-                            span.name Mạnh 20
-                            span.profession Sản phẩm bên SIXSTARs mang lại cho mình sự hài lòng rất lớn. Bao cao su thì có đủ loại nhưng đặc biệt là không có mùi cao su quá nồng, cao su chất lượng tốt, độ co dãn cao, không gây ngứa, kích ứng cho người dùng. Tôi rất yên tâm khi sử dụng sản phẩm
-                .swiper-slide.card
+                        h2.name Mạnh 20
+                        p.description
+                            | Sản phẩm bên SIXSTARs mang lại cho mình sự hài lòng rất lớn. Bao cao su thì có đủ loại nhưng đặc biệt là không có mùi cao su quá nồng, cao su chất lượng tốt, độ co dãn cao, không gây ngứa, kích ứng cho người dùng. Tôi rất yên tâm khi sử dụng sản phẩm
+                        //- button.button View More
+                .card.swiper-slide
+                    .image-content
+                        span.overlay
+                        .card-image
+                            img.card-img(src='../img/ShuMo.jpg' alt='')
                     .card-content
-                        .image
-                            img(src="../img/NgocNSL.jpg", alt="")
-                        .feedback__content
-                            span.name Mót
-                            span.profession Hôm qua là lần đầu mình sử dụng bao cao su bên SIXSTARs nhưng mình cảm thấy rất bất ngờ về chất lượng. Bao cao su thì mỏng vừa đủ, độ bền cao, không nồng mùi cao su quá nhiều, cảm giác mang lại cực kì an tâm.
-                .swiper-slide.card
+                        h2.name Shu Mô
+                        p.description
+                            | Sản phẩm bên SIXSTARs rất đa dạng, phù hợp với nhu cầu của mỗi người. Có chia nhóm các loại bao cao su tùy theo sở thích của mỗi người. Ngoài ra, những sản phẩm tặng kèm giúp cho cuộc yêu của chúng mình rất cháy và vui nhộn. I love SIXSTARs.
+                        //- button.button View More
+                .card.swiper-slide
+                    .image-content
+                        span.overlay
+                        .card-image
+                            img.card-img(src='../img/Ngoc.jpg' alt='')
                     .card-content
-                        .image
-                            img(src="../img/ShuMoo.jpg", alt="")
-                        .feedback__content
-                            span.name Shu Mô
-                            span.profession Sản phẩm bên SIXSTARs rất đa dạng, phù hợp với nhu cầu của mỗi người. Có chia nhóm các loại bao cao su tùy theo sở thích của mỗi người. Ngoài ra, những sản phẩm tặng kèm như là đồ hầu gái, gel bôi trơn,… giúp cho cuộc yêu thêm nồng cháy và thú vị
-                .swiper-slide.card
+                        h2.name Mót
+                        p.description
+                            | Hôm qua là lần đầu mình sử dụng bao cao su bên SIXSTARs nhưng mình cực kì bất ngờ về chất lượng của sản phẩm. Bao cao su thì mỏng vừa đủ, độ bền cao, không nồng mùi cao su quá nhiều, cảm giác mang lại cực kì sảng khoái 💕
+                        //- button.button View More
+                .card.swiper-slide
+                    .image-content
+                        span.overlay
+                        .card-image
+                            img.card-img(src='../img/ZiZi.jpg' alt='')
                     .card-content
-                        .image
-                            img(src="../img/ViNSL.jpg", alt="")
-                        .feedback__content
-                            span.name ZiZi
-                            span.profession Về chất lượng sản phẩm vì không có gì để nói vì nó đã khá là tốt. Ngoài ra, SIXSTARs có những ưu đãi dành cho khách hàng rất tốt. Bên cạnh đó SIXSTARs còn có hàng trăm cơ sở giúp cho người dùng dễ tìm kiếm, tiếp cận và mua hàng hơn.
-        .swiper-button-next
-        .swiper-button-prev
+                        h2.name ZiZi
+                        p.description
+                            | Về chất lượng sản phẩm thì không có gì để nói nữa vì nó đã khá là tốt. Mình cảm thấy SIXSTARs có những ưu đãi dành cho khách hàng rất tốt. Bên cạnh đó SIXSTARs còn có hàng trăm cơ sở nên rất dễ tìm kiếm và mua hàng thuận tiện hơn.
+                        //- button.button View More
+        .swiper-button-next.swiper-navBtn
+        .swiper-button-prev.swiper-navBtn
         .swiper-pagination
-    // Swiper JS
-    script(src='https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js')
-    // Initialize Swiper
-    script.
-        var swiper = new Swiper(".mySwiper", {
-        slidesPerView: 3,
-        spaceBetween: 30,
-        slidesPerGroup: 3,
-        loop: true,
-        loopFillGroupWithBlank: true,
-        pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-        },
-        navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-        },
-        });
+script(type="module" src="../js/script.js") 
