--- a/src/page/layout/service.pug
+++ b/src/page/layout/service.pug
@@ -4,19 +4,15 @@
       .title  
         h1 Cam Kết Dịch Vụ
       .src-block 
-        .sv
-          .icon1  
-            img(src="../img/icon1.png", alt="")
-          .p1 24/7
-        .sv 
-          .icon2 
-            img(src="../img/icon4.png", alt="")
-          .p2 Đảm Bảo Uy Tín, Chất Lượng
-        .sv
-          .icon3  
-            img(src="../img/icon3.png", alt="")
-          .p3 Giao Hàng Nhanh Chóng 
-        .sv
-          .icon4 
-            img(src="../img/icon2.png", alt="")
-          .p4 Mua Hàng dễ dàng
+        .icon1  
+          img(src="../img/iconA.png", alt="")
+          p 24/7
+        .icon2 
+          img(src="../img/iconD.png", alt="")
+          p Đảm Bảo Uy Tín, Chất Lượng
+        .icon3  
+          img(src="../img/iconC.png", alt="")
+          p Giao Hàng Nhanh Chóng 
+        .icon4 
+          img(src="../img/iconB.png", alt="")
+          p Mua Hàng dễ dàng
