--- a/src/page/layout/evaluation.pug
+++ b/src/page/layout/evaluation.pug
@@ -1,30 +1,31 @@
 .evaluation 
-    .container 
-        .Box-Flex 
-            .Box-Title
-                h1 đánh giá <span>nổi </span>  
-            .Box-Feature 
-                .TN
-                    .con-tooltip.bottom
-                        p TÍNH NĂNG ƯU VIỆT 
-                        .tooltip
-                            p Bao cao su với đầy đủ các loại từ gân gai quyền lực, chân thật tự nhiên tới dẻo dai bền bỉ đều có, kích thước đa dạng lớn nhỏ phù hợp mọi loại size, đảm bảo thỏa mãn mọi cuộc yêu. SIXSTARs đa dạng, sáng tạo và thu hút.
-                .BV    
-                    .con-tooltip.bottom
-                        p BẢO VỆ VƯỢT TRỘI
-                        .tooltip
-                            p SIXSTARs không chỉ nhắm đến việc đảm bảo sự đa dạng về chủng loại mà còn đảm bảo về chất lượng sản phẩm, sản phẩm được làm 100% chất liệu từ thiên nhiên kết hợp với các hoạt chất giúp bảo vệ làn da khỏi các yếu tố như nấm, vi khuẩn, vi rút,... lên đến 99%. SIXSTARs nâng niu làn da, thăng hoa cùng cảm xúc.
-                .QL  
-                    .con-tooltip.bottom
-                        p QUYỀN LỢI TIỆN ÍCH
-                        .tooltip
-                            p Đăng kí trở thành thành viên của SIXSTARs ngay bây giờ để nhận nhiều ưu đãi và phần quà hấp dẫn đến từ SIXSTARs khi mua hàng online và offline. Và khi trở thành viên VIP của chúng tôi bạn sẽ được hưởng nhiều đặc quyền mà chỉ có ở SIXSTARs. SIXSTARs - nâng niu cậu bé Việt.
-                .CL    
-                    .con-tooltip.bottom
-                        p LỰA CHỌN TỐT NHẤT 
-                        .tooltip
-                            p SIXSTARs tự hào đã đem đến cho hơn 10 triệu khách hàng Việt Nam trải nghiệm an toàn và tuyệt vời nhất. Hơn 99% khách hàng đều có phản hồi tích cực khi trải nghiệm sản phẩm và dịch vụ ở đây. Và hơn thế nữa SIXSTARs có hơn 200 cơ sở trải dài trên toàn quốc đảm bảo phục vụ quý khách 24/7 giúp cho cuộc yêu của quý khách không bị gián đoạn. SIXSTARs hứng thú từng phút giây, hăng say trong mọi khoảnh khắc.
-            button.Box-Button TÌM HIỂU NGAY 
+    .evaluation-bg
+        .container 
+            .Box-Flex 
+                .Box-Title
+                    h1 đánh giá <span>nổi </span>  
+                .Box-Feature 
+                    .TN
+                        .con-tooltip.bottom
+                            p TÍNH NĂNG ƯU VIỆT 
+                            .tooltip
+                                p Bao cao su với đầy đủ các loại từ gân gai quyền lực, chân thật tự nhiên tới dẻo dai bền bỉ đều có, kích thước đa dạng lớn nhỏ phù hợp mọi loại size, đảm bảo thỏa mãn mọi cuộc yêu. SIXSTARs đa dạng, sáng tạo và thu hút.
+                    .BV    
+                        .con-tooltip.bottom
+                            p BẢO VỆ VƯỢT TRỘI
+                            .tooltip
+                                p SIXSTARs không chỉ nhắm đến việc đảm bảo sự đa dạng về chủng loại mà còn đảm bảo về chất lượng sản phẩm, sản phẩm được làm 100% chất liệu từ thiên nhiên kết hợp với các hoạt chất giúp bảo vệ làn da khỏi các yếu tố như nấm, vi khuẩn, vi rút,... lên đến 99%. SIXSTARs nâng niu làn da, thăng hoa cùng cảm xúc.
+                    .QL  
+                        .con-tooltip.bottom
+                            p QUYỀN LỢI TIỆN ÍCH
+                            .tooltip
+                                p Đăng kí trở thành thành viên của SIXSTARs ngay bây giờ để nhận nhiều ưu đãi và phần quà hấp dẫn đến từ SIXSTARs khi mua hàng online và offline. Và khi trở thành viên VIP của chúng tôi bạn sẽ được hưởng nhiều đặc quyền mà chỉ có ở SIXSTARs. SIXSTARs - nâng niu cậu bé Việt.
+                    .CL    
+                        .con-tooltip.bottom
+                            p LỰA CHỌN TỐT NHẤT 
+                            .tooltip
+                                p SIXSTARs tự hào đã đem đến cho hơn 10 triệu khách hàng Việt Nam trải nghiệm an toàn và tuyệt vời nhất. Hơn 99% khách hàng đều có phản hồi tích cực khi trải nghiệm sản phẩm và dịch vụ ở đây. Và hơn thế nữa SIXSTARs có hơn 200 cơ sở trải dài trên toàn quốc đảm bảo phục vụ quý khách 24/7 giúp cho cuộc yêu của quý khách không bị gián đoạn. SIXSTARs hứng thú từng phút giây, hăng say trong mọi khoảnh khắc.
+                button.Box-Button TÌM HIỂU NGAY 
         
 
 
