--- a/src/page/layout/header.pug
+++ b/src/page/layout/header.pug
@@ -48,8 +48,8 @@
             a.search-btn(href='#')
               svg.bi.bi-search(xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewbox='0 0 16 16')
                 path(d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z')
-          button.btn.btn1 Product
-          button.btn.btn2 Pricing
+          button#product.btn.btn1 Product
+          button#pricing.btn.btn2 Pricing
           button#sign-in.btn.btn3 Sign In
           button#sign-up.btn.btn4 Sign Up
   // img chính
@@ -69,5 +69,4 @@
               i
         .cover-img
           img(src='../img/coverDown.png' alt='')
-script(type="module" src="../js/header.js") 
-
+script(type="module" src="../js/header.js")
