--- a/src/page/layout/product.pug
+++ b/src/page/layout/product.pug
@@ -1,61 +1,61 @@
 .product-part
-    .container
-        .productLeft
-            .img__bcs
-                img(src="../img/BaoCaoSuMain.png", alt="")
-            .content__bcs
-                h1.header_content Bao cao su chính
-                .nav-bcs__content
-                    p Bao cao su SIXSTARs - loại trơn truyền thống - Sản phẩm chính bán chạy nhất thị trường hiện nay. Bao cao su siêu chất lượng, giá cả hợp lý mà còn đem đến trải nghiệm chân thật nhất cho bạn, đảm bảo sẽ không làm bạn thất vọng.Bao cao su SIXSTARs xin đảm bảo về mặt chất lượng:
-                    ul
-                        li Thoáng mát
-                        li Thiên nhiên
-                        li Đa dạng về kích thước
-                        li Đa dạng về hương vị
-                    p 1 hộp gồm:
-                    ul
-                        li Hộp nhỏ: 3 cái/hôp
-                        li Hộp lớn: 6 cái/hộp
-                .btn-control__Buynow
-                    a.btn(href="#") BUY NOW
-        .productRight
-            .content__bcs
-                h1.header_content Bao cao su dạng khác
-                .nav-bcs__content
-                    p Ngoài loại trơn truyền thống, SIXSTARs sẽ giới thiệu thêm một số sản phẩm tiêu biểu và nổi trội khác: 
-                    ul
-                        li Dạng gân gai
-                        li Dạng có hình đặc biệt
-                        li Dạng phát sáng
-                    p Với thiết kế tỉ mỉ, độ an toàn cao cùng chất lượng cao cấp đảm bảo đem đến cảm giác mới lạ và sảng khoái cho người dùng, phục vụ tận tình mọi nhu cầu và sở thích.
-                .btn-control__Buynow
-                    a.btn(href="#") BUY NOW
-            .img__otherBcs
-                img(src="../img/BaoCaoSuGai1.png", alt="").img__otherBcsLeft
-                img(src="../img/BaoCaoSuGai2.png", alt="").img__otherBcsRight
-        .productLeft
-            .img__gel
-                img(src="../img/Gel1.png", alt="").img__gelLeft
-                img(src="../img/Gel3.png", alt="").img__gelRight
-            .content__bcs
-                h1.header_content Gel bôi trơn
-                .nav-bcs__content
-                    p Gel bôi trơn SIXSTARs - giúp khúc nhạc dạo đầu du dương, dễ dàng và bay bổng hơn. Sản phẩm đa dạng về mùi vị giúp bạn đê mê trong mọi cuộc yêu
-                    p Gel bôi trơn SIXSTARs đảm bảo về
-                    ul 
-                        li Mùi hương thơm ngát
-                        li Không chất kích ứng
-                        li Dịu nhẹ
-                .btn-control__Buynow
+    #toProduct.bg 
+        .container
+            .productLeft
+                .img__bcs
+                    img(src="../img/BaoCaoSuMain.png", alt="")
+                .content__bcs
+                    h1.header_content Bao cao su chính
+                    .nav-bcs__content
+                        p Bao cao su SIXSTARs - loại trơn truyền thống - Sản phẩm chính bán chạy nhất thị trường hiện nay. Bao cao su siêu chất lượng, giá cả hợp lý mà còn đem đến trải nghiệm chân thật nhất cho bạn, đảm bảo sẽ không làm bạn thất vọng.Bao cao su SIXSTARs xin đảm bảo về mặt chất lượng:
+                        ul
+                            li Thoáng mát
+                            li Thiên nhiên
+                            li Đa dạng về kích thước
+                            li Đa dạng về hương vị
+                        p 1 hộp gồm:
+                        ul
+                            li Hộp nhỏ: 3 cái/hôp
+                            li Hộp lớn: 6 cái/hộp
+                    .btn-control__Buynow
                         a.btn(href="#") BUY NOW
-        .productRight
-            .content__bcs
-                h1.header_content Các sản phẩm khác
-                .nav-bcs__content
-                    p Chỉ 3 bửu bối trên là chưa đủ? Đừng lo, SIXSTARs còn cung cấp các board game, các công cụ giúp cho cuộc yêu của bạn thêm phần thú vị và hấp dẫn, đảm bảo sẽ hâm nóng cuộc yêu của bạn với nhiều trải nghiệm mới mẻ hấp dẫn mà có lẻ bạn sẽ không bao giờcó thể quên được. SIXSTARs trải nghiệm cùng thăng hoa.
-                .btn-control__Buynow
-                    a.btn(href="#") BUY NOW
-            .img__other
-                img(src="../img/MayRun.png", alt="")
-                img(src="../img/DohauGai.png", alt="")
-                img(src="../img/BoardGameSex.png", alt="")
+            .productRight
+                .content__bcs
+                    h1.header_content Bao cao su dạng khác
+                    .nav-bcs__content
+                        p Ngoài loại trơn truyền thống, SIXSTARs sẽ giới thiệu thêm một số sản phẩm tiêu biểu và nổi trội khác: 
+                        ul
+                            li Dạng gân gai
+                            li Dạng có hình đặc biệt
+                            li Dạng phát sáng
+                        p Với thiết kế tỉ mỉ, độ an toàn cao cùng chất lượng cao cấp đảm bảo đem đến cảm giác mới lạ và sảng khoái cho người dùng, phục vụ tận tình mọi nhu cầu và sở thích.
+                    .btn-control__Buynow
+                        a.btn(href="#") BUY NOW
+                .img__otherBcs
+                    img(src="../img/BaoCaoSuGai1.png", alt="")
+            .productLeft
+                .img__gel
+                    img(src="../img/Gel1.png", alt="").img__gelLeft
+                    img(src="../img/Gel3.png", alt="").img__gelRight
+                .content__bcs
+                    h1.header_content Gel bôi trơn
+                    .nav-bcs__content
+                        p Gel bôi trơn SIXSTARs - giúp khúc nhạc dạo đầu du dương, dễ dàng và bay bổng hơn. Sản phẩm đa dạng về mùi vị giúp bạn đê mê trong mọi cuộc yêu
+                        p Gel bôi trơn SIXSTARs đảm bảo về
+                        ul 
+                            li Mùi hương thơm ngát
+                            li Không chất kích ứng
+                            li Dịu nhẹ
+                    .btn-control__Buynow
+                            a.btn(href="#") BUY NOW
+            .productRight
+                .content__bcs
+                    h1.header_content Các sản phẩm khác
+                    .nav-bcs__content
+                        p Chỉ 3 bửu bối trên là chưa đủ? Đừng lo, SIXSTARs còn cung cấp các board game, các công cụ giúp cho cuộc yêu của bạn thêm phần thú vị và hấp dẫn, đảm bảo sẽ hâm nóng cuộc yêu của bạn với nhiều trải nghiệm mới mẻ hấp dẫn mà có lẻ bạn sẽ không bao giờcó thể quên được. SIXSTARs trải nghiệm cùng thăng hoa.
+                    .btn-control__Buynow
+                        a.btn(href="#") BUY NOW
+                .img__other
+                    img(src="../img/MayRun.png", alt="")
+                    img(src="../img/DohauGai.png", alt="")
+                    img(src="../img/BoardGameSex.png", alt="")
