--- a/src/page/layout/voucher.pug
+++ b/src/page/layout/voucher.pug
@@ -1,42 +1,49 @@
 .container-new
-  .container
-    // topic nè
-    .nav
-      .nav-topic
-        h1 KHUYẾN MÃI
-      .nav-total
-        // khung img + content
-        .demo-voucher.sparkle.u-hover--sparkle
-          .img-voucher.heart
-            img(src='../img/Voucher1.png' alt='')
-          .content-voucher
-            p
-              span  Voucher 1:
-              |                         Voucher Sale 50% cho khách hàng 
-              |                         tích đủ 222 điểm khách hàng thường xuyên.
-            .emo-vnn
-              a.emo-vnn-dn(href='#') Dùng ngay
-        // khung img + content
-        .demo-voucher.sparkle.u-hover--sparkle
-          .img-voucher
-            img(src='../img/Voucher2.png' alt='' srcset='')
-          .content-voucher
-            p
-              span  Voucher 2:
-              |                             Khách hàng lần đầu mua hàng với
-              |                             đơn giá chỉ từ 4.999.999 VNĐ trở lên sẽ được tặng
-              |                             một sản phẩm tự chọn bất kì từ SIXSTARs.
-            .emo-vnn
-              a.emo-vnn-dn(href='#') Dùng ngay 
-        // khung img + content
-        .demo-voucher.sparkle.u-hover--sparkle
-          .img-voucher.heart
-            img(src='../img/Voucher3.png' alt='' srcset='')
-          .content-voucher
-            p
-              span  Voucher 3:
-              |                         Khi mua hàng tại SIXSTARs vào các
-              |                         ngày lễ lớn, quý khách sẽ được tặng 1 bao
-              |                         cao su hương tùy chọn chỉ có tại SIXSTARs.
-            .emo-vnn
-              a.emo-vnn-dn(href='#') Dùng ngay
+  .voucher-bg
+    .container
+      // topic nè
+      .nav
+        .nav-topic
+          h1 KHUYẾN MÃI
+        .nav-total
+          // khung img + content
+          .demo-voucher.sparkle.u-hover--sparkle
+            .img-voucher.heart
+              img(src='../img/Voucher1.png' alt='')
+            .content-voucher
+              p
+                span  Voucher 1:
+                |                         Voucher Sale 50% cho khách hàng 
+                |                         tích đủ 419 điểm khách hàng thường xuyên.
+              .emo-vnn
+                a(style='--clr:#3498db' href='#')
+                  span Dùng ngay
+                  i 
+          // khung img + content
+          .demo-voucher.sparkle.u-hover--sparkle
+            .img-voucher
+              img(src='../img/Voucher2.png' alt='' srcset='')
+            .content-voucher
+              p
+                span  Voucher 2:
+                |                             Khách hàng lần đầu mua hàng với
+                |                             đơn giá chỉ từ 4.999.999 VNĐ trở lên sẽ được tặng
+                |                             một sản phẩm tự chọn bất kì từ SIXSTARs.
+              .emo-vnn
+                a(style='--clr:#3498db' href='#')
+                  span Dùng ngay
+                  i 
+          // khung img + content
+          .demo-voucher.sparkle.u-hover--sparkle
+            .img-voucher.heart
+              img(src='../img/Voucher3.png' alt='' srcset='')
+            .content-voucher
+              p
+                span  Voucher 3:
+                |                         Khi mua hàng tại SIXSTARs vào các
+                |                         ngày lễ lớn, quý khách sẽ được tặng 1 bao
+                |                         cao su hương tùy chọn chỉ có tại SIXSTARs.
+              .emo-vnn
+                a(style='--clr:#3498db' href='#')
+                  span Dùng ngay
+                  i 
