--- a/src/scss/component/benefits.scss
+++ b/src/scss/component/benefits.scss
@@ -1,96 +1,204 @@
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 .benefits-part{
+    // .bg{
+    //     background-color: #f6f6f4;
+    // }
     .container{
-        // border: 2px solid blue;
+        // border: 2px solid white;
         padding: 1rem;
-        background-color: #2a2a2a;
+        // background-color: #f6f6f4;
+        border-radius: 20px;
     }
     .title{
         // border: 2px solid greenyellow;
         text-align: center;
-        font-size: 3rem;
-        font-weight: 1000;
-        background-color: #2a2a2a;
-        color: #fff;
+        font-size: 6rem;
+        font-weight: 900;
+        // background-color: #2a2a2a;
+        color: #2a2a2a;
         text-shadow: -3px 1px 1px #eeeeee;
-        word-spacing: 1.2rem;
-        padding: 1rem;
+        word-spacing: 1rem;
+        padding: 1rem 0rem 2rem;
     }
     .benefits{
         // border: 2px solid orange;
         display: flex;
-        flex-wrap: nowrap;
-        background-color: #fff;
-        box-shadow: 7px -6px 1px #eeeeee;
+        // flex-wrap: nowrap;
+        // background-color: #f6f6f4;
+        // box-shadow: 7px -6px 1px #eeeeee;
+        // border-radius: 20px;
+        padding-top: 2rem;
     }
     .benefit-column{
-        // border: 2px solid purple;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
+        // // border: 2px solid purple;
+        // display: flex;
+        // justify-content: center;
+        // flex-wrap: wrap;
+        // width: 33.3%;
+        // // align-content: flex-start;
         width: 33.3%;
-        align-content: flex-start;
+        position: relative;
+        display: block;
+        padding-top: 40px;
+        transition: all 500ms ease;
+        margin-bottom: 60px;
+    }
+    .benefit-column:hover{
+        transform: translateY(-10px);
+        .benefit-infor{
+            box-shadow: 0px 6px 10px 3px white;
+            background-color: aliceblue;
+            transition: 0.5s;
+        }
     }
     .benefit-name{
-        border: 2px solid red;
+        // border: 2px solid red;
+        // text-align: center;
+        // border-radius: 100%;
+        // margin: 10px 0 0 0;
+        // padding: 10px;
+        // font-weight: 800;
+        // width: 15rem;
+        // height: 15rem;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
+        // transition: 0.5s;
+        // font-family: 'Paytone One', sans-serif;
+        // font-size: 1.8rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100px;
+        height: 100px;
+        display: block;
+        border: 5px solid pink;
+        border-radius: 50%;
         text-align: center;
-        border-radius: 100%;
-        margin: 10px 0 0 0;
-        padding: 10px;
-        font-weight: 800;
-        width: 10rem;
-        height: 10rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.5s;
+        margin: 0 auto;
+        z-index: 3;
+        color: #27282c;
+        font-size: 40px;
+        transition: all 700ms ease 100ms;
+        padding-top: 1.5rem;
+        background-color: #fff;
     }
-    .benefit-name:hover{
-        background: linear-gradient(to bottom, #fff, lightblue);
-        border: 2px groove#eeeeee;
+    .benefit-name::before{
+        position: absolute;
+        top: -1px;
+        left: -1px;
+        bottom: -1px;
+        right: -1px;
+        content: "";
+        background-color: pink;
+        border-radius: 50%;
+        transition: all 0.5s ease-in-out 0s;
+        transform-style: preserve-3d;
+        transform: perspective(1200px) rotateY(-90deg) translateZ(0px);
+        opacity: 0;
+        z-index: -1;
     }
+    .benefit-column:hover .benefit-name::before{
+        transform: perspective(1200px) rotateY(0deg) translateZ(0px);
+        transition-delay: 0.1s;
+        opacity: 1;
+    }
+    // .benefit-name:hover{
+    //     background: linear-gradient(to bottom, #fff, lightblue);
+    //     border: 2px groove#eeeeee;
+    // }
     .benefit-infor{
-        border: 2px solid lightblue;
+        // border: 2px solid lightblue;
+        // border-radius: 20px;
+        // text-align: center;
+        // margin: 10px 40px 50px;
+        // padding: 10px;
+        // font-weight: 500;
+        // padding: 5rem;
+        // width: 334px;
+        // height: 164px;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;  
+        position: relative;
+        display: block;
+        padding: 82px 30px 50px;
+        background: #ffffff;
+        border-top: 6px solid pink;
+        // -webkit-box-shadow: 0px 6px 10px 3px #e8e8e8;
         text-align: center;
-        margin: 10px 100px 50px;
-        padding: 10px;
-        font-weight: 500;
+        box-shadow: 0px 6px 10px 3px #e8e8e8;
+        transition: all 300ms ease;
+        margin: 1rem;
+        height: 100%;
     }
 }
-@media(max-width: 960px){
+// @media(max-width: 1100px){
+//     .benefits-part{
+//         // .benefit-infor{
+//         //     width: 600px;
+//         //     margin-left: 4rem;
+//         //     margin-top: 5rem;
+//         //     padding: 3rem;
+//         // }
+//     }
+// }
+// @media(max-width: 960px){
+//     .benefits-part{
+//         .benefits{
+//             flex-direction: column;
+//         }
+//         .benefit-column{
+//             width: 100%;
+//             justify-content: center;
+//             align-items: center;
+//             flex-wrap: nowrap;
+//         }
+//         .benefit-name{
+//             margin: 10px;
+//             padding: 0;
+//         }
+//         .benefit-infor{
+//             width: 600px;
+//             margin-left: 2rem;
+//             // margin-top: 5rem;
+//             padding: 5rem;
+//         }
+//     }
+// }
+@media(max-width: 840px){
     .benefits-part{
-        .benefits{
-            flex-direction: column;
-        }
-        .benefit-column{
-            width: 100%;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: nowrap;
-            margin: 0;
-            padding: 0;
-        }
-        .benefit-name{
-            margin: 10px;
-            padding: 0;
-        }
-        .benefit-infor{
-            width: 600px;
+        .title span{
             display: flex;
             justify-content: center;
-            margin: 0;
-            padding: 0;
-        }
-    }
-}
-@media(max-width: 780px){
-    .benefits-part{
-        .benefit-column{
+            align-items: center;
             flex-wrap: wrap;
         }
+        .benefits{
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+        }
+        .benefit-column{
+            width: 80%;
+        }
         .benefit-infor{
-            margin: 10px;
-            width: 50rem;
-            // height: 50rem;
+            padding-top: 5rem;
         }
     }
 }
+// @media(max-width: 610px){
+//     .benefits-part{
+//         .benefit-infor{
+//             width: 40rem;
+//         }
+//     }
+// }
+// @media(max-width: 520px){
+//     .benefits-part{
+//         .benefit-infor{
+//             width: 30rem;
+//         }
+//     }
+// }
