--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 .huy {
     .container {
@@ -16,7 +17,6 @@
         position: relative;
         width: 30px;
         height: 30px;
-        // cursor: pointer;
         box-shadow: 7px 4px 1px #eeeeee;
     }
 
@@ -185,8 +185,9 @@
     }
 
     .nav {
-        height: 7rem;
-        padding: 0 4rem;
+        font-family: 'Lato', sans-serif;
+        height: 8rem;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -204,10 +205,9 @@
         background: none;
         list-style-type: none;
         border: 1px solid #3498db;
-        padding: 0.8rem 1.3rem;
-        font-size: 1.3rem;
+        padding: 1rem 2rem;
+        font-size: 1.8rem;
         font-weight: bold;
-        cursor: pointer;
         margin: 0.8rem;
         transition: 0.8s;
         position: relative;
@@ -298,8 +298,8 @@
 
     .nav-logo_text {
         color: #03a4ed;
-        font-size: 2.4rem;
-        font-weight: bold;
+        font-size: 3.5rem;
+        font-weight: 700;
     }
 
     .nav-logo_text a {
@@ -367,11 +367,11 @@
     .cover {
         display: flex;
         justify-content: space-between;
-        align-items: center;
         position: relative;
-        max-width: 100%;
-        min-height: 93vh;
+        min-height: 92vh;
         padding: 0 10rem;
+        align-content: center;
+        align-items: center;
     }
 
     .cover-text {
@@ -384,7 +384,7 @@
     .cover-text h2 {
         color: #03a4ed;
         font-weight: bold;
-        font-size: 3rem;
+        font-size: 3.8rem;
     }
 
     .cover-text span {
@@ -392,32 +392,28 @@
     }
 
     .cover-text h1 {
-        margin-top: 2rem;
-        font-weight: bold;
-        font-size: 3.8rem;
+        margin-top: 1.8rem;
+        font-weight: bolder;
+        font-size: 4rem;
+        margin-bottom: 1.8rem;
+        color: #000;
     }
 
     .cover-text p {
-        font-size: 1.8rem;
+        font-size: 2.6rem;
         text-align: justify;
     }
 
     .cover-img {
         width: 40%;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        margin-top: 2rem;
-
     }
 
     .cover-img img {
         display: block;
-        width: 100%;
-        height: 45%;
+        width: 120%;
         border-radius: 10px;
-        box-shadow: 8px 6px 1px #eeeeee;
-        transition: 0.3s;
+        box-shadow: 8px 6px 1px #2a2a2a;
+        transition: .3s;
     }
 
     /* btn-buy now */
@@ -503,7 +499,7 @@
 }
 
 /* media */
-@media (max-width:930px) {
+@media (max-width:1000px) {
     .huy {
 
         .btn2,
@@ -511,90 +507,85 @@
             display: none;
         }
 
-        .search-box,
-        .search-text {
-            width: 240px;
-            padding: 0 6px;
-            top: 50px;
+        .search-box{
+            display: flex;
+            width: 300px;
         }
-
+        .search-text {
+            width: 300px;
+            padding: 0 6px;
+            float: left;
+            height: 40px;
+        }
         .search-btn {
             background: #fff;
             position: absolute;
-            right: 42%;
+            right: 44%;
         }
     }
 }
 
-@media (max-width:745px) {
+@media (max-width:800px) {
     .huy {
-
-        .btn1,
-        .btn2,
-        .btn3,
-        .btn4 {
-            display: block;
+        .cover{ 
+            min-height: 150vh;
+        }
+        .nav{
+            position: relative;
         }
 
         .btn {
-            padding: 0.8rem 15rem;
+            padding: 0.8rem 30%;
         }
 
         .menu-list {
-            display: block;
+            display: flex;
+            align-content: space-between;
+            flex-direction: column;
             position: absolute;
             bottom: 100px;
             right: 100px;
             background: #2a2a2a;
-            width: 500px;
+            width: 100%;
             z-index: 50;
             height: 60vh;
         }
 
         .search-box,
         .search-text {
-            width: 350px;
+            width: 70%;
         }
 
         .search-box {
             position: absolute;
             top: 85%;
-            left: 75px;
         }
-
-        .search-btn {
+        .search-btn{
             position: absolute;
-            right: 0;
+            right: 0%;
         }
-
         .btn1 {
             display: block;
             position: absolute;
             top: 5%;
-            left: 60px;
         }
 
         .btn2 {
             display: block;
             position: absolute;
             top: 25%;
-            left: 60px;
         }
 
         .btn3 {
             display: block;
             position: absolute;
             top: 45%;
-            left: 60px;
-            text-align: center;
         }
 
         .btn4 {
             display: block;
             position: absolute;
             top: 65%;
-            left: 60px;
-            text-align: center;
         }
 
         .menu-btn {
@@ -609,8 +600,9 @@
 
         .menu-btn:checked~.menu-list {
             position: absolute;
-            bottom: -450px;
+            top: 100%;
             opacity: 1;
+            left: 0%;
         }
 
         .menu-btn_icon {
@@ -668,24 +660,80 @@
     }
 }
 
-@media(max-width: 675px) {
+@media(max-width: 1250px) {
     .huy {
-        .cover {
-            display: flex;
-            justify-content: flex-start;
-            flex-direction: column;
+        .cover-text h1{
+            font-size: 3.8rem;
+        }
+        .cover-text p{
+            font-size: 2.2rem;
         }
     }
 }
 
-@media(max-width: 655px) {
+@media(max-width: 1000px) {
     .huy {
-        .btn-buy_now i {
-            display: none;
+        .cover-text h1{
+            font-size: 3.5rem;
+        }
+        .cover-text p{
+            font-size: 1.8rem;
+        }
+    }
+}
+@media(max-width: 880px) {
+    .huy {
+        .cover-text h1{
+            font-size: 3rem;
+        }
+        .cover-text p{
+            font-size: 2.2rem;
+        }
+    }
+}
+@media(max-width: 800px) {
+    .huy {
+        .cover{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        .cover-text{
+            width: 100%;
+        }
+        .cover-text p{
+            margin-bottom: 2rem;
+        }
+        .btn-buy_now{
+            display: flex;
+            width: 100%;
+            justify-content: flex-end;
+        }
+        .cover-img{
+            display: flex;
+            width: 100%;
+            justify-content: center;
+        }
+        .btn-buy_now {
+            padding: 10%;
+        }
+    }
+}
+@media(max-width: 485px) {
+    .huy {
+        .cover-text h1{
+            font-size: 3.5rem;
         }
 
-        .btn-buy_now a {
-            width: auto;
+        .cover-text p{
+            font-size: 2rem;
+        }
+            
+        .btn-buy_now a{
+            font-size: 2rem;
+        }
+        .cover{
+            min-height: 120vh;
         }
     }
 }
