--- a/src/scss/component/service.scss
+++ b/src/scss/component/service.scss
@@ -1,11 +1,12 @@
 .huytwice{
-    .svr-bg{
-        background-color: #dbdbdb;
-    }
+    // .svr-bg{
+    //     background-color: #dbdbdb;
+    // }
     .container{
         max-width: 1320px;
         height: 100%;
         width: 100%;
+        padding: 5rem 0rem;
     }
     .title{
         text-align: center;
@@ -16,6 +17,7 @@
         text-shadow: 3px 0px 1px #2a2a2a;
         text-transform: uppercase;
         padding: 10px;
+        margin-bottom: 3rem;
     }
     .src-block{
         display: flex;
@@ -23,93 +25,129 @@
         justify-content: space-around;
         flex-wrap: wrap;
     }
-    .sv{
-        display: flex;
-        flex-direction: column;
-        position: relative;
-    }
     .icon1{
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
         width: 20rem;
-        height: 29rem;
-        box-shadow: 8px -5px #4a4a4a;
+        height: 20rem;
     }
     .icon1 img{
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 70%;
+        height: 70%;
     }
     .icon2{
         display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         width: 20rem;
-        height: 29rem;
-        box-shadow: 8px -5px #4a4a4a;
+        height: 20rem;
     }
     .icon2 img{
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 70%;
+        height: 70%;
     }
     .icon3{
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
+        flex-direction: column;
         width: 20rem;
-        height: 29rem;
-        box-shadow: 8px -5px #4a4a4a;
+        height: 20rem;
     }
     .icon3 img{
         display: block;
-        width: 120%;
-        height: 120%;
+        width: 70%;
+        height: 70%;
     }
     .icon4{
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
         width: 20rem;
-        height: 29rem;
-        box-shadow: 8px -5px #4a4a4a;
+        height: 20rem;
     }
     .icon4 img{
         display: block;
-        width: 120%;
-        height: 120%;
+        width: 70%;
+        height: 70%;
     }
-    .p1{
-        text-align: center;
-        font-size: 2rem;
-        font-weight: bold;
-        position: absolute;
-        bottom: 10%;
-        left: 75px;
+    .src-block p{
+        padding: .5rem 0;
+        text-align:initial;
+        font-size: 1.8rem;
+        font-weight: 700;
+        color: #000;
+        letter-spacing: 1px;
     }
-    .p2{
-        text-align: center;
-        font-size: 2rem;
-        font-weight: bold;
-        position: absolute;
-        bottom: 10%;
-        left: 7px;
+}
+@media (max-width: 835px) {
+    .huytwice{
+        .title{
+            font-size: 2rem;
+        }
+        .src-block{
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+        }
+        .src-block p{
+            font-size: 1.8rem;
+        }
+        .icon1, .icon2, .icon3,.icon4{
+            width: 35%;
+            height: 90%;
+        }
     }
-    .p3{
-        text-align: center;
-        font-size: 2rem;
-        font-weight: bold;
-        position: absolute;
-        bottom: 10%;
-        left: 7px;
+}
+@media (max-width: 540px) {
+    .huytwice{
+        .title{
+            font-size: 1.5rem;
+        }
+        .src-block{
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+            padding: 0 10px;
+        }
+        .src-block p{
+            font-size: 1.5rem;
+        }
+        .icon1, .icon2, .icon3,.icon4{
+            width: 35%;
+            height: 35%;
+        }
+        .icon1 img, .icon2 img, .icon3 img,.icon4 img{
+            width: 60%;
+            height: 60%;
+        }
     }
-    .p4{
-        text-align: center;
-        font-size: 2rem;
-        font-weight: bold;
-        position: absolute;
-        bottom: 10%;
-        left: 7px;
+}
+@media (max-width: 480px) {
+    .huytwice{
+        .title{
+            font-size: 1.2rem;
+        }
+        .src-block p{
+            font-size: 1.2rem;
+        }
+        .icon1, .icon2, .icon3,.icon4{
+            width: 35%;
+            height: 35%;
+        }
+        .icon1 img, .icon2 img, .icon3 img,.icon4 img{
+            width: 50%;
+            height: 50%;
+        }
     }
 }
