--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,7 @@ html{
     font-size: 62.5%;
     font-family: 'Quicksand', sans-serif;
     // font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 body{
     font-size: 1.6rem;
